Rectangle calculator finished

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <input id="triangle-height" type="text" class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="height">
                             <span class="ml-2">cm</span>
                         </p>
-                        <p>Area: <span id="show-area">0</span> cm<sup>2</sup></p>
+                        <p>Area: <span id="triangle-area">0</span> cm<sup>2</sup></p>
                         <div class="card-actions">
                             <button onclick="triangleCalculator()" class="btn btn-primary w-full">Calculate</button>
                         </div>
