--- a/index.html
+++ b/index.html
@@ -74,8 +74,15 @@
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">Parallelogram!</h2>
                         <p>Area (A) = b x h</p>
+                        <p>
+                            <input id="parallelogram-base" type="text" class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="base">
+                            <span class="mx-2">cm </span>
+                            <input id="parallelogram-height" type="text" class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="height">
+                            <span class="ml-2">cm</span>
+                        </p>
+                        <p>Area: <span id="parallelogram-area">0</span> cm<sup>2</sup></p>
                         <div class="card-actions">
-                            <button class="btn btn-primary">Calculate</button>
+                            <button onclick="parallelogramCalculator()" class="btn btn-primary w-full">Calculate</button>
                         </div>
                     </div>
                 </div>
