Finished the ellipse calculator

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
                         <h2 class="card-title">Triangle!</h2>
                         <p>Area (A) = 0.5 x b x h</p>
                         <p>
-                            <input id="triangle-base" type="text" class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="base">
+                            <input id="triangle-base" type="text"
+                                class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="base">
                             <span class="mx-2">cm </span>
-                            <input id="triangle-height" type="text" class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="height">
+                            <input id="triangle-height" type="text"
+                                class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="height">
                             <span class="ml-2">cm</span>
                         </p>
                         <p>Area: <span id="triangle-area">0</span> cm<sup>2</sup></p>
@@ -55,9 +57,11 @@
                         <h2 class="card-title">Rectangle!</h2>
                         <p>Area (A) = b x h</p>
                         <p>
-                            <input id="rectangle-width" type="text" class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="width">
+                            <input id="rectangle-width" type="text"
+                                class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="width">
                             <span class="mx-2">cm </span>
-                            <input id="rectangle-length" type="text" class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="length">
+                            <input id="rectangle-length" type="text"
+                                class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="length">
                             <span class="ml-2">cm</span>
                         </p>
                         <p>Area: <span id="rectangle-area">0</span> cm<sup>2</sup></p>
@@ -75,14 +79,39 @@
                         <h2 class="card-title">Parallelogram!</h2>
                         <p>Area (A) = b x h</p>
                         <p>
-                            <input id="parallelogram-base" type="text" class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="base">
+                            <input id="parallelogram-base" type="text"
+                                class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="base">
                             <span class="mx-2">cm </span>
-                            <input id="parallelogram-height" type="text" class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="height">
+                            <input id="parallelogram-height" type="text"
+                                class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="height">
                             <span class="ml-2">cm</span>
                         </p>
                         <p>Area: <span id="parallelogram-area">0</span> cm<sup>2</sup></p>
                         <div class="card-actions">
-                            <button onclick="parallelogramCalculator()" class="btn btn-primary w-full">Calculate</button>
+                            <button onclick="parallelogramCalculator()"
+                                class="btn btn-primary w-full">Calculate</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- ellipse -->
+                <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="images/ellipse.png" alt="ellipse" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">ellipse!</h2>
+                        <p>Area (A) = 3.1416 x a x b</p>
+                        <p>
+                            <input id="ellipse-base" type="text"
+                                class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="base">
+                            <span class="mx-2">cm </span>
+                            <input id="ellipse-height" type="text"
+                                class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="height">
+                            <span class="ml-2">cm</span>
+                        </p>
+                        <p>Area: <span id="ellipse-area">0</span> cm<sup>2</sup></p>
+                        <div class="card-actions">
+                            <button onclick="ellipseCalculator()" class="btn btn-primary w-full">Calculate</button>
                         </div>
                     </div>
                 </div>
