--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                         <h2 class="card-title">Triangle!</h2>
                         <p>Area (A) = 0.5 x b x h</p>
                         <p>
-                            <input id="triangle-base" type="text"
+                            <input id="triangle-base" type="number"
                                 class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="base">
                             <span class="mx-2">cm </span>
-                            <input id="triangle-height" type="text"
+                            <input id="triangle-height" type="number"
                                 class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="height">
                             <span class="ml-2">cm</span>
                         </p>
@@ -57,10 +57,10 @@
                         <h2 class="card-title">Rectangle!</h2>
                         <p>Area (A) = b x h</p>
                         <p>
-                            <input id="rectangle-width" type="text"
+                            <input id="rectangle-width" type="number"
                                 class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="width">
                             <span class="mx-2">cm </span>
-                            <input id="rectangle-length" type="text"
+                            <input id="rectangle-length" type="number"
                                 class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="length">
                             <span class="ml-2">cm</span>
                         </p>
@@ -79,10 +79,10 @@
                         <h2 class="card-title">Parallelogram!</h2>
                         <p>Area (A) = b x h</p>
                         <p>
-                            <input id="parallelogram-base" type="text"
+                            <input id="parallelogram-base" type="number"
                                 class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="base">
                             <span class="mx-2">cm </span>
-                            <input id="parallelogram-height" type="text"
+                            <input id="parallelogram-height" type="number"
                                 class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="height">
                             <span class="ml-2">cm</span>
                         </p>
@@ -102,10 +102,10 @@
                         <h2 class="card-title">ellipse!</h2>
                         <p>Area (A) = 3.1416 x a x b</p>
                         <p>
-                            <input id="ellipse-base" type="text"
+                            <input id="ellipse-base" type="number"
                                 class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="base">
                             <span class="mx-2">cm </span>
-                            <input id="ellipse-height" type="text"
+                            <input id="ellipse-height" type="number"
                                 class="border text-md w-24 px-3 rounded-lg bg-gray-200" placeholder="height">
                             <span class="ml-2">cm</span>
                         </p>
